<resources>
    <string name="app_name">AndroidExperiment</string>
    <string name="nav_title_home">Home</string>
    <string name="nav_title_friends">Friends</string>
    <string name="nav_title_profile">Profile</string>
    <string name="friendlist_row_friend_name">TextView</string>
    <string name="friends_detail_id">TextView</string>
    <string name="friend_input_name_label">お名前</string>
    <string name="friend_input_name">Name</string>
    <string name="friend_list_add_button">追加</string>
    <string name="friend_input_sex_label">性別</string>
    <string name="friend_input_sex_man">男性</string>
    <string name="friend_input_sex_woman">女性</string>
    <string name="friend_input_birthday_label">誕生日</string>
    <string name="friend_input_profile_label">プロフィール</string>
    <string name="friend_input_button_label">追加</string>
    <string name="friend_input_birthday">誕生日を選択する</string>
    <string name="friend_list_birtyday_view">yyyy-mm-dd</string>
    <string name="profile_main_nav_title_profile">Profile</string>
    <string name="profile_main_nav_title_reference">Reference</string>
    <string name="profile_main_nav_title_feed">Feed</string>
    <string name="profile_table_id_label">id</string>
    <string name="profile_table_name_label">name</string>

    <string name="facebook_app_id">790831134627498</string>
    <string name="fb_login_protocol_scheme">fb790831134627498</string>
    <string name="activity_main_go_login_window">ログイン画面へ</string>
    <string name="activity_main_go_login_top_window">ログイン後画面へ</string>
    <string name="public_index_login_text">ログイン画面</string>
</resources>
